Java version bumped to 11 and other miner improvements.
Introduced lombok.
Bumped OpenPnP OpenCV version.
Code improvements.